--- a/packages/gelly-core/package.json
+++ b/packages/gelly-core/package.json
@@ -7,12 +7,12 @@
     ".": "./dist/index.js"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "19.2.1",
+    "react-dom": "19.2.1"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "19.2.1",
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
     "@types/react": "19.1.8",
