--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@gelly-ui/core": "workspace:*",
     "autoprefixer": "^10.0.0",
-    "next": "^14.0.0",
+    "next": "16.0.7",
     "postcss": "^8.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
